--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,8 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav m-auto d-flex align-items-center justify-content-center p-0">
                     <li class="nav-item">
-                        <a class="nav-link text-navbar" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-navbar" href="index.html">Inicio<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-navbar" href="quienes-somos.html">Quienes Somos</a>
@@ -142,148 +143,7 @@
                             <div class="col-md-6 mb-5">
                                 <!-- Articulo -->
                                 <article class="card shadow-lg">
-                                    <img class="card-img-top mb-0" src="img/imagenes/c3.jpg" alt="">
-                                    <div class="card-body">
-                                        <div class="text-title">
-                                            <h2 class="h2-responsive card-title text-theme font-weight-bold">Titulo</h2>
-                                            <div class="blog-subtitle d-flex w-100 mb-3 mt-0">
-                                                <!-- Author -->
-                                                <div class="author mr-2 text-theme">
-                                                    <i class="far fa-user"></i>
-                                                    <span>dsperez</span>
-                                                </div>
-                                                <!-- ./Author -->
-
-                                                <!-- Date -->
-                                                <div class="date mr-2 text-theme">
-                                                    <i class="fas fa-calendar-alt"></i>
-                                                    <span>11/04/2020</span>
-                                                </div>
-                                                <!-- ./Date -->
-
-                                                <!-- Category -->
-                                                <div class="category text-theme">
-                                                    <i class="fas fa-check"></i>
-                                                    <span>Tecnología</span>
-                                                </div>
-                                                <!-- ./Category -->
-
-                                            </div>
-                                        </div>
-                                        <hr>
-                                        <p class="card-text mt-1">Lorem ipsum dolor sit amet consectetur adipisicing
-                                            elit. Ea
-                                            rerum, est exercitationem deserunt temporibus natus provident modi.
-                                            Laudantium, quos dignissimos?</p>
-                                        <hr>
-                                        <!-- Boton -->
-                                        <div class="w-100 text-center">
-                                            <a href="article.html" class="btn btn-theme text-white">Leer</a>
-                                        </div>
-                                        <!-- Boton -->
-
-                                    </div>
-                                </article>
-                                <!-- ./Articulo -->
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <!-- Articulo -->
-                                <article class="card shadow-lg">
-                                    <img class="card-img-top mb-0" src="img/imagenes/c3.jpg" alt="">
-                                    <div class="card-body">
-                                        <div class="text-title">
-                                            <h2 class="h2-responsive card-title text-theme font-weight-bold">Titulo</h2>
-                                            <div class="blog-subtitle d-flex w-100 mb-3 mt-0">
-                                                <!-- Author -->
-                                                <div class="author mr-2 text-theme">
-                                                    <i class="far fa-user"></i>
-                                                    <span>dsperez</span>
-                                                </div>
-                                                <!-- ./Author -->
-
-                                                <!-- Date -->
-                                                <div class="date mr-2 text-theme">
-                                                    <i class="fas fa-calendar-alt"></i>
-                                                    <span>11/04/2020</span>
-                                                </div>
-                                                <!-- ./Date -->
-
-                                                <!-- Category -->
-                                                <div class="category text-theme">
-                                                    <i class="fas fa-check"></i>
-                                                    <span>Tecnología</span>
-                                                </div>
-                                                <!-- ./Category -->
-
-                                            </div>
-                                        </div>
-                                        <hr>
-                                        <p class="card-text mt-1">Lorem ipsum dolor sit amet consectetur adipisicing
-                                            elit. Ea
-                                            rerum, est exercitationem deserunt temporibus natus provident modi.
-                                            Laudantium, quos dignissimos?</p>
-                                        <hr>
-                                        <!-- Boton -->
-                                        <div class="w-100 text-center">
-                                            <a href="article.html" class="btn btn-theme text-white">Leer</a>
-                                        </div>
-                                        <!-- Boton -->
-
-                                    </div>
-                                </article>
-                                <!-- ./Articulo -->
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <!-- Articulo -->
-                                <article class="card shadow-lg">
-                                    <img class="card-img-top mb-0" src="img/imagenes/c3.jpg" alt="">
-                                    <div class="card-body">
-                                        <div class="text-title">
-                                            <h2 class="h2-responsive card-title text-theme font-weight-bold">Titulo</h2>
-                                            <div class="blog-subtitle d-flex w-100 mb-3 mt-0">
-                                                <!-- Author -->
-                                                <div class="author mr-2 text-theme">
-                                                    <i class="far fa-user"></i>
-                                                    <span>dsperez</span>
-                                                </div>
-                                                <!-- ./Author -->
-
-                                                <!-- Date -->
-                                                <div class="date mr-2 text-theme">
-                                                    <i class="fas fa-calendar-alt"></i>
-                                                    <span>11/04/2020</span>
-                                                </div>
-                                                <!-- ./Date -->
-
-                                                <!-- Category -->
-                                                <div class="category text-theme">
-                                                    <i class="fas fa-check"></i>
-                                                    <span>Tecnología</span>
-                                                </div>
-                                                <!-- ./Category -->
-
-                                            </div>
-                                        </div>
-                                        <hr>
-                                        <p class="card-text mt-1">Lorem ipsum dolor sit amet consectetur adipisicing
-                                            elit. Ea
-                                            rerum, est exercitationem deserunt temporibus natus provident modi.
-                                            Laudantium, quos dignissimos?</p>
-                                        <hr>
-                                        <!-- Boton -->
-                                        <div class="w-100 text-center">
-                                            <a href="article.html" class="btn btn-theme text-white">Leer</a>
-                                        </div>
-                                        <!-- Boton -->
-
-                                    </div>
-                                </article>
-                                <!-- ./Articulo -->
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <!-- Articulo -->
-                                <article class="card shadow-lg">
-                                    <img class="card-img-top mb-0" src="img/imagenes/c3.jpg" alt="">
+                                    <img class="card-img-top mb-0" src="img/imagenes/c4.jpg" alt="">
                                     <div class="card-body">
                                         <div class="text-title">
                                             <h2 class="h2-responsive card-title text-theme font-weight-bold">Titulo</h2>
@@ -330,31 +190,35 @@
                         </div>
                         <!-- ./Artículos -->
 
-                        <!-- Paginación -->
-                        <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center">
-                            <ul class="pagination pg-blue">
-                                <li class="page-item">
-                                    <a class="page-link" tabindex="-1">Previous</a>
-                                </li>
-                                <li class="page-item active">
-                                    <a class="page-link">1</a>
-                                </li>
-                                <li class="page-item">
-                                    <a class="page-link">2 <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="page-item"><a class="page-link">3</a></li>
-                                <li class="page-item ">
-                                    <a class="page-link">Next</a>
-                                </li>
-                            </ul>
-                        </nav>
-                        <!-- ./Paginación -->
 
                     </div>
                 </div>
             </div>
             <!-- ./Section Content -->
         </section>
+
+        <!-- Paginación -->
+        <div class="bg-light-blue-5 py-4">
+            <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center mb-0">
+                <ul class="pagination pg-blue">
+                    <li class="page-item">
+                        <a class="page-link" tabindex="-1">Previous</a>
+                    </li>
+                    <li class="page-item active">
+                        <a class="page-link">1</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link">2 <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="page-item"><a class="page-link">3</a></li>
+                    <li class="page-item ">
+                        <a class="page-link">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <!-- ./Paginación -->
+
     </main>
     <!-- Contenido -->
 
