--- a/article.html
+++ b/article.html
@@ -117,7 +117,7 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="section-wrapper">
+    <main>
         <section class="article">
 
             <!-- Section Title -->
@@ -166,14 +166,15 @@
             <!-- ./Section Title -->
 
             <!-- Section Content -->
-            <div class="section-content content-bg lighten-5">
-                <div class="content-wrapper max-width">
+            <div class="section-content">
+                <div class="content-wrapper max-width bg-light-blue-1">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-4">
                                 <!-- Button trigger modal -->
                                 <div type="button" data-toggle="modal" data-target="#exampleModal">
-                                    <img src="img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt="" srcset="">
+                                    <img src="img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt=""
+                                        srcset="">
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -199,28 +200,30 @@
                     <div class="w-100">
                         <a href="blog.html" class="btn btn-theme text-white">Volver</a>
                     </div>
-                    <!-- Paginación -->
-                    <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center my-5">
-                        <ul class="pagination pg-blue">
-                            <li class="page-item">
-                                <a class="page-link" tabindex="-1">Previous</a>
-                            </li>
-                            <li class="page-item active">
-                                <a class="page-link">1</a>
-                            </li>
-                            <li class="page-item">
-                                <a class="page-link">2 <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="page-item"><a class="page-link">3</a></li>
-                            <li class="page-item ">
-                                <a class="page-link">Next</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <!-- ./Paginación -->
                 </div>
             </div>
             <!-- ./Section Content -->
+            <!-- Paginación -->
+            <div class="bg-light-blue-5">
+                <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center py-4">
+                    <ul class="pagination pg-blue">
+                        <li class="page-item">
+                            <a class="page-link" tabindex="-1">Previous</a>
+                        </li>
+                        <li class="page-item active">
+                            <a class="page-link">1</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link">2 <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="page-item"><a class="page-link">3</a></li>
+                        <li class="page-item ">
+                            <a class="page-link">Next</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- ./Paginación -->
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
