article section-content

--- a/article.html
+++ b/article.html
@@ -170,14 +170,18 @@
                 <div class="content-wrapper max-width bg-light-blue-1">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-4">
-                                <!-- Button trigger modal -->
-                                <div type="button" data-toggle="modal" data-target="#exampleModal">
+
+                            <!-- Imagen trigger modal -->
+                            <div class="col-md-5">
+                                <div data-toggle="modal" data-target="#exampleModal">
                                     <img src="img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt=""
                                         srcset="">
-                                </div>
+                                </div>                          
                             </div>
-                            <div class="col-md-8">
+                            <!-- ./Imagen trigger modal -->
+
+                            <!-- Texto -->
+                            <div class="col-md-7">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi neque laboriosam eum
                                     tempora
                                     adipisci voluptas iusto dolor sed soluta nesciunt minima ducimus ex earum, porro non
@@ -195,9 +199,11 @@
                                     nisi corrupti blanditiis. Molestias, tenetur? Unde voluptate at sunt. Omnis!
                                 </p>
                             </div>
+                            <!-- ./Texto -->
+
                         </div>
                     </div>
-                    <div class="w-100">
+                    <div class="w-100 mx-auto text-center mt-4">
                         <a href="blog.html" class="btn btn-theme text-white">Volver</a>
                     </div>
                 </div>
