--- a/article.html
+++ b/article.html
@@ -134,25 +134,24 @@
                             <h1 class="h1-responsive titulo-articulo titulo-texto text-uppercase font-weight-bold">
                                 Articulo</h1>
                             <hr class="hr-section-title">
-                            <br>
                             <div class="articulo-subtitle d-flex w-100 mb-3 mt-0 flex-column">
                                 <!-- Author -->
-                                <div class="author mr-2 text-white my-2">
-                                    <i class="far fa-user text-theme"></i>
+                                <div class="author text-white my-2">
+                                    <i class="far fa-user text-theme mx-2"></i>
                                     <span>dsperez</span>
                                 </div>
                                 <!-- ./Author -->
 
                                 <!-- Date -->
-                                <div class="date mr-2 text-white my-2">
-                                    <i class="fas fa-calendar-alt text-theme"></i>
+                                <div class="date text-white my-2">
+                                    <i class="fas fa-calendar-alt text-theme mx-2"></i>
                                     <span>11/04/2020</span>
                                 </div>
                                 <!-- ./Date -->
 
                                 <!-- Category -->
                                 <div class="category text-white my-2">
-                                    <i class="fas fa-check text-theme"></i>
+                                    <i class="fas fa-check text-theme mx-2"></i>
                                     <span>Tecnología</span>
                                 </div>
                                 <!-- ./Category -->
