--- a/blog.html
+++ b/blog.html
@@ -147,23 +147,23 @@
                                     <div class="card-body">
                                         <div class="text-title">
                                             <h2 class="h2-responsive card-title text-theme font-weight-bold">Titulo</h2>
-                                            <div class="blog-subtitle d-flex w-100 mb-3 mt-0">
+                                            <div class="blog-subtitle w-100 mb-3 mt-0">
                                                 <!-- Author -->
-                                                <div class="author mr-2 text-theme">
+                                                <div class="author m-2 text-theme">
                                                     <i class="far fa-user"></i>
                                                     <span>dsperez</span>
                                                 </div>
                                                 <!-- ./Author -->
 
                                                 <!-- Date -->
-                                                <div class="date mr-2 text-theme">
+                                                <div class="date m-2 text-theme">
                                                     <i class="fas fa-calendar-alt"></i>
                                                     <span>11/04/2020</span>
                                                 </div>
                                                 <!-- ./Date -->
 
                                                 <!-- Category -->
-                                                <div class="category text-theme">
+                                                <div class="category text-theme m-2">
                                                     <i class="fas fa-check"></i>
                                                     <span>Tecnología</span>
                                                 </div>
