--- a/article.html
+++ b/article.html
@@ -118,7 +118,7 @@
 
     <!-- Contenido -->
     <main>
-        <section class="article">
+        <section class="article ">
 
             <!-- Section Title -->
             <div class="view">
@@ -165,8 +165,8 @@
             <!-- ./Section Title -->
 
             <!-- Section Content -->
-            <div class="section-content">
-                <div class="content-wrapper max-width bg-light-blue-1">
+            <div class="section-content bg-light-blue-1">
+                <div class="content-wrapper max-width">
                     <div class="container-fluid">
                         <div class="row">
 
@@ -180,7 +180,7 @@
                             <!-- ./Imagen trigger modal -->
 
                             <!-- Texto -->
-                            <div class="col-md-7">
+                            <div class="col-md-7  pt-5 pt-md-0">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi neque laboriosam eum
                                     tempora
                                     adipisci voluptas iusto dolor sed soluta nesciunt minima ducimus ex earum, porro non
@@ -208,7 +208,8 @@
                 </div>
             </div>
             <!-- ./Section Content -->
-            <!-- Paginación -->
+
+            <!-- Paginación --> 
             <div class="bg-light-blue-5">
                 <nav aria-label="Page navigation" class="d-flex align-items-center justify-content-center py-4">
                     <ul class="pagination pg-blue">
@@ -230,6 +231,8 @@
             </div>
             <!-- ./Paginación -->
 
+            <!-- /* ------------------------------------ MODAL ----------------------------------*/ -->
+            
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
@@ -247,6 +250,9 @@
                 </div>
             </div>
             <!-- ./Modal -->
+
+            <!-- /* ------------------------------------ MODAL ----------------------------------*/ -->
+
 
         </section>
     </main>
