--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -257,7 +257,7 @@
             <h2 class="h2-responsive text-theme text-center content-h2 pb-5">Nuestros Clientes</h2>
 
             <!-- Carousel Clientes -->
-            <div id="carousel-clientes" class="carousel slide max-width pt-5 mx-auto shadow-lg" data-ride="carousel">
+            <div id="carousel-clientes" class="carousel slide max-width pt-5 mx-auto" data-ride="carousel">
                 <div class="carousel-inner bg-light">
                     <div class="carousel-item active">
                         <div class="content-img">
