--- a/contacto.html
+++ b/contacto.html
@@ -238,10 +238,10 @@
                         <!-- ./Formulario -->
 
                         <!-- Google map -->
-                        <div id="map-container-google-1" class="section-content__map-container my-5 p-0">
+                        <div id="map-container-google-1" class="section-content__map-container my-5">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12610.52510214519!2d-122.4059758598319!3d37.798680131327636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085806800ecb699%3A0xf91d657fb37e68fd!2sSan%20Francisco%2C%20California%2094126%2C%20EE.%20UU.!5e0!3m2!1ses-419!2smx!4v1585591882087!5m2!1ses-419!2smx"
-                                frameborder="0" allowfullscreen style="border:0; padding: 0; height: 40vh; width: 100%;">
+                                frameborder="0" allowfullscreen class="g-maps">
                             </iframe>
                         </div>
                         <!-- ./Google map -->
