carousel clientes changes

--- a/servicios.html
+++ b/servicios.html
@@ -48,9 +48,8 @@
         </div>
         <!-- ./Date & Time section -->
 
-        <!-- ./Logo -->
-
-        <!-- Menú -->
+        
+        <!-- Menu -->
         <nav class="navbar navbar-expand-lg navbar-dark color-theme p-0 shadow-none">
             <!-- Logo -->
             <div class="logo bg-logo px-5 py-3 text-center">
@@ -58,6 +57,7 @@
                     <img src="dist/img/logo/lionsdev-white.png" alt="logo" width="180">
                 </a>
             </div>
+            <!-- ./Logo -->
             <button class="navbar-toggler d-lg-none p-3" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -109,7 +109,7 @@
 
             </div>
         </nav>
-        <!-- ./Menú -->
+        <!-- ./Menu -->
 
 
     </header>
@@ -141,11 +141,11 @@
                     <div class="content-wrapper max-width">
                         <h2 id="nuestros-servicios" class="h2-responsive text-theme text-center content-h2 pb-5">
                             Nuestros Servicios</h2>
-                        <p class="text-justify">En la actualidad las empresas requieren enfocarse en dar a
+                        <p class="">En la actualidad las empresas requieren enfocarse en dar a
                             conocer los productos o servicios que estas ofrecen por medio de un medio digital
                             encabezado en primer lugar por una página web la cual permitirá a lograr dicho objetivo.
                         </p>
-                        <p class="text-justify">La presentación de la página tiene que ser amigable para el usuario,
+                        <p class="">La presentación de la página tiene que ser amigable para el usuario,
                             llamativa y con la necesidad de impulsar el producto o servicio que tu quieres dar a
                             conocer. La clave está en el diseño como son los colores, presentación, información
                             y multimedia. </p>
@@ -155,6 +155,7 @@
                         <!-- Tarjetas -->
                         <div class="servicios container-fluid">
                             <div class="row py-5">
+                                
                                 <!-- Diseño Web -->
                                 <div class="col-md-6 p-0 mt-5">
                                     <div>
