--- a/article.html
+++ b/article.html
@@ -180,7 +180,7 @@
                             <!-- ./Imagen trigger modal -->
 
                             <!-- Texto -->
-                            <div class="col-md-7  pt-5dist/ pt-md-0">
+                            <div class="col-md-7  pt-5 pt-md-0">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi neque laboriosam eum
                                     tempora
                                     adipisci voluptas iusto dolor sed soluta nesciunt minima ducimus ex earum, porro non
