--- a/article.html
+++ b/article.html
@@ -117,8 +117,8 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main>
-        <section class="article ">
+    <main class="main">
+        <section class="article">
 
             <!-- Section Title -->
             <div class="view">
@@ -173,7 +173,7 @@
                             <!-- Imagen trigger modal -->
                             <div class="col-md-5">
                                 <div data-toggle="modal" data-target="#exampleModal">
-                                    <img src="dist/img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt=""
+                                    <img src="dist/img/imagenes/c4.jpg" class="section-content__img img-fluid w-100 object-fit-cover" alt=""
                                         srcset="">
                                 </div>                          
                             </div>
