--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <!-- Quienes Somos -->
                     <div class="col-md-6 p-0">
                         <div class="view">
-                            <img class="d-block w-100" src="dist/img/imagenes/edificio.jpeg">
+                            <img class="index__img d-block w-100 img-fluid" src="dist/img/imagenes/edificio.jpeg">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
@@ -186,7 +186,7 @@
                     <!-- Servicios -->
                     <div class="col-md-6 p-0">
                         <div class="view">
-                            <img class="d-block w-100" src="dist/img/imagenes/welcome.jpeg">
+                            <img class="index__img d-block w-100" src="dist/img/imagenes/welcome.jpeg">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
@@ -215,7 +215,7 @@
                     <!-- Blog -->
                     <div class="col-md-7 p-0">
                         <div class="view">
-                            <img class="d-block w-100" src="dist/img/imagenes/blog.jpeg">
+                            <img class="index__img d-block w-100" src="dist/img/imagenes/blog.jpeg">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
@@ -239,7 +239,7 @@
                     <!-- Contacto -->
                     <div class="col-md-5 p-0 d-none d-md-block">
                         <div class="view">
-                            <img class="d-block w-100" src="dist/img/imagenes/contacto.jpeg">
+                            <img class="index__img d-block w-100" src="dist/img/imagenes/contacto.jpeg">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
