article title section changes

--- a/article.html
+++ b/article.html
@@ -128,13 +128,13 @@
                         <img src="dist/img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt="" srcset="">
                     </div>
                 </div>
-                <div class="mask rgba-stylish-strong section-title">
-                    <div class="texto-articulo max-width mx-auto d-flex">
+                <div class="section-title mask rgba-stylish-strong">
+                    <div class="section-title__text max-width mx-auto d-flex">
                         <div class="white-text">
-                            <h1 class="h1-responsive titulo-articulo titulo-texto text-uppercase font-weight-bold">
+                            <h1 class="h1-responsive section-title__text-title titulo-texto text-uppercase font-weight-bold">
                                 Articulo</h1>
                             <hr class="hr-section-title">
-                            <div class="articulo-subtitle d-flex w-100 mb-3 mt-0 flex-column">
+                            <div class="section-title__text-subtitle d-flex w-100 mb-3 mt-0 flex-column">
                                 <!-- Author -->
                                 <div class="author text-white my-2">
                                     <i class="far fa-user text-theme mx-2"></i>
