--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="Description" content="Diseño y Desarrollo Web, empresa creadora de paginas web.">
     <title> lionsdevstudio - Inicio</title>
     <!-- Color navegador -->
     <meta name="theme-color" content="#0d47a1" />
@@ -163,7 +164,7 @@
                     <!-- Quienes Somos -->
                     <div class="col-md-6 p-0">
                         <div class="view">
-                            <img class="index__img d-block w-100 img-fluid" src="dist/img/imagenes/edificio.jpeg">
+                            <img class="index__img d-block w-100 img-fluid" src="dist/img/imagenes/edificio.jpeg" alt="edificio corporativo">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
@@ -186,7 +187,7 @@
                     <!-- Servicios -->
                     <div class="col-md-6 p-0">
                         <div class="view">
-                            <img class="index__img d-block w-100" src="dist/img/imagenes/welcome.jpeg">
+                            <img class="index__img d-block w-100" src="dist/img/imagenes/welcome.jpeg" alt="Stickers con leyenda imaginar, crear, inspirar">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
@@ -215,7 +216,7 @@
                     <!-- Blog -->
                     <div class="col-md-7 p-0">
                         <div class="view">
-                            <img class="index__img d-block w-100" src="dist/img/imagenes/blog.jpeg">
+                            <img class="index__img d-block w-100" src="dist/img/imagenes/blog.jpeg" alt="libreta de trabajo y computadora">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
@@ -239,7 +240,7 @@
                     <!-- Contacto -->
                     <div class="col-md-5 p-0 d-none d-md-block">
                         <div class="view">
-                            <img class="index__img d-block w-100" src="dist/img/imagenes/contacto.jpeg">
+                            <img class="index__img d-block w-100" src="dist/img/imagenes/contacto.jpeg" alt="personas felicitando y cerrando contrato">
                             <div class="mask flex-center rgba-indigo-light">
                                 <div class="content">
                                     <div class="white-text p-5 text-justify">
