--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="Description" content="Diseño y Desarrollo Web, empresa creadora de paginas web.">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Color navegador -->
     <meta name="theme-color" content="#0d47a1" />
