--- a/servicios.html
+++ b/servicios.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="Description" content="Diseño y Desarrollo Web, empresa creadora de paginas web.">
     <!-- Color navegador -->
     <meta name="theme-color" content="#0d47a1" />
     <!-- Titulo -->
