--- a/contacto.html
+++ b/contacto.html
@@ -127,7 +127,7 @@
                 <div class="section-img d-block w-100">
                     <img src="dist/img/imagenes/contacto.jpeg" class="img-fluid w-100" alt="personas saludando">
                 </div>
-                <div class="mask rgba-stylish-strong section-title d-flex align-items-center justify-content-center">
+                <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Contacto</h1>
                         <hr class="hr-section-title">
