--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="Author" content="Daniel S.Perez">
     <meta name="Description" content="Diseño y Desarrollo Web, empresa creadora de paginas web.">
     <title> lionsdevstudio - Inicio</title>
     <!-- Color navegador -->
@@ -136,7 +137,7 @@
                 <div class="section-img d-block w-100">
                     <img src="dist/img/imagenes/c8.jpeg" class="full-screen object-fit-cover" alt="personas saludando">
                 </div>
-                <div class="mask rgba-black-light section-title d-flex align-items-center justify-content-center">
+                <div class="mask rgba-black-light main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-center px-5">
                         <h1 class="h1-responsive text-center pt-5">Diseño y Desarrollo Web</h1>
                         <hr class="hr-section-title">
