--- a/servicios.html
+++ b/servicios.html
@@ -125,7 +125,7 @@
                 <div class="section-img d-block w-100">
                     <img src="dist/img/imagenes/welcome.jpeg" class="img-fluid w-100" alt="" srcset="">
                 </div>
-                <div class="mask rgba-stylish-strong section-title d-flex align-items-center justify-content-center">
+                <div class="mask rgba-stylish-strong main-view d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Servicios</h1>
                         <hr class="hr-section-title">
