--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="d-flex mt-5 justify-content-center">
                             <a data-scroll href="#index" class="btn btn-theme">Secciones</a>
                             <a data-scroll href="#contacto"
-                                class="btn-contacto btn btn-primary ml-3 d-md-none">Contacto</a>
+                                class="btn btn-primary ml-3 d-md-none">Contacto</a>
                         </div>
                     </div>
                 </div>
