head google fonts added

--- a/article.html
+++ b/article.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="dist/css/mdb.min.css">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="dist/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -126,7 +127,7 @@
                 <!-- Button trigger modal -->
                 <div type="button" data-toggle="modal" data-target="#exampleModal">
                     <div class="section-img d-block w-100">
-                        <img src="dist/img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt="" srcset="">
+                        <img loading="lazy" src="dist/img/imagenes/c4.jpg" class="img-fluid w-100 object-fit-cover" alt="laptop y café">
                     </div>
                 </div>
                 <div class="section-title mask rgba-stylish-strong">
@@ -174,8 +175,7 @@
                             <!-- Imagen trigger modal -->
                             <div class="col-md-5">
                                 <div data-toggle="modal" data-target="#exampleModal">
-                                    <img src="dist/img/imagenes/c4.jpg" class="section-content__img img-fluid w-100 object-fit-cover" alt=""
-                                        srcset="">
+                                    <img loading="lazy" src="dist/img/imagenes/c4.jpg" class="section-content__img img-fluid w-100 object-fit-cover" alt="laptop y café">
                                 </div>                          
                             </div>
                             <!-- ./Imagen trigger modal -->
@@ -245,7 +245,7 @@
                             </button>
                         </div>
                         <div class="modal-body p-0">
-                            <img src="dist/img/imagenes/c4.jpg" class="d-block w-100 object-fit-cover" alt="" srcset="">
+                            <img loading="lazy" src="dist/img/imagenes/c4.jpg" class="d-block w-100 object-fit-cover" alt="laptop y café">
                         </div>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
         <!-- Derechos Reservados -->
         <div class="footer-copyright text-center py-3">© 2020 Derechos Reservados:
             <a href="index.html">
-                <img src="dist/img/logo/lionsdev-white.png" alt="logo" width="80" class="ml-1">
+                <img loading="lazy" src="dist/img/logo/lionsdev-white.png" alt="logo" width="80" class="ml-1">
             </a>
         </div>
         <!-- Derechos Reservados -->
